ui/css/treeherder.css
/* ... */
#quick-filter:valid + #quick-filter-clear-button {
    display: inherit;
}

#quick-filter-clear-button {
    color: #bababa;
    font-size: 13px;
    cursor: pointer;
    position: absolute;
    display: none;
    top: 7px;
    right: 5px;
    height: 16px;
}

.th-global-content {
    flex: 1; /* Not using auto because it causes unnecessary reflows, see https://bugzilla.mozilla.org/show_bug.cgi?id=1162725 */
    -webkit-flex: auto;
    position: relative;/* need this to position inner content */
    overflow-y: auto;
}

.nav-panel-help-text {
    color: #2b393f;
    margin-bottom: 10px;
}

/* Options drop-downs*/

.th-top-nav-options-panel {
    background-color: lightgray;
    padding: 10px;
    border: 1px solid black;
    max-height: 400px;
    overflow-y: auto;
}

.th-top-nav-options-panel .th-option-heading {
    padding: 3px 10px;
    background-color: #354048;;
    color: white;
}

.th-inline-option-group {
    display: inline-block;
}

.th-stacked-option-group {
    display: block;
}

.th-option-group {
    margin-right: 5px;
    border: 1px solid #101010;
    -moz-border-radius:5px;
    -webkit-border-radius:5px;
    border-radius:5px;
}

.th-option-heading .th-panel-heading{
    padding: 5px 10px;
    background-color: #354048;
}

#jobFilterValue {
    width: 150px;
}

#jobFilterChoiceValue {
    width: 150px;
}

#jobFilterField {
    width: 200px;
}

.field-filter-form {
    border-top: 2px solid lightgray;
    margin-top: 5px;
    padding: 3px;
    background-color: lightgray;
}

.field-filter {
    margin: 3px;
}

.field-filter a, .th-option-heading a {
    color: white;
    cursor: pointer;
}

.field-filter-placeholder a {
    cursor: pointer;
}

/**
  sheriff panel
*/
.add-new-exclusion input.ng-invalid.ng-dirty{border-color: #B94A48;}

/**
  Failures
*/

.th-failures-box {
    position: fixed;
    top: 46px;
    right:0px;
    padding:2px;
}

.th-failures-box li{
    background-color: #222;
    color: #999;
    border-color: #080808;
}
.th-failures-box li a{
    color: #428bca;
}

.view-nav {
    background-color: #353f47;
}

.view-nav a {
    color: lightgray;

}

/*
    Resultsets
*/

.th-revision-btn {
    margin-left: 10px;
    width: calc(100% - 170px);
}

.th-action-button span.dropdown:hover ul.dropdown-menu{
    display: block;
}

.th-action-button:after {
  content: none;
}

.th-rs-loading {
    width: 50px;
    display: inline-block;
    height: 35px;
    margin-bottom: -14px;
    margin-left: 5px;
}

.revision {
    font-size: 12px;
    padding-top: 2px;
    overflow: auto;
}

.revision-holder > a {
    padding-top: 2px;
    font: 11px "Lucida Console",Monaco,monospace;
}

.revision-holder {
    padding-left:20px;
    padding-right: 11px;
}

.revision-comment {
    color: #777;
}

.platform {
    font-size: 12px;
    padding-left: 0;
    padding-right: 5px;
    width: 14.5em;
    min-width: 14.5em;
    overflow: hidden;
    vertical-align: top;
}

.job-row {
    display: table-cell;
    white-space: normal;
    word-break: normal;

}

.icon-superscript {
    vertical-align: super;
    font-size: 0.625em;
    margin-left: -0.2em;
}

.result-set {
    padding-bottom: 0px;
    margin-left: 0;
    margin-top: 2px;
    white-space: normal;
    width: 100%;
    position: relative;
}

.result-set-body-divider {
    margin-left: 34px;
    border-bottom: 1px solid lightgrey;
}

.result-set-body {
    padding-left: 15px;
    padding-right: 25px;
}

/* Encompasses unknown push,resultset,repo */
.unknown-message-body {
    padding-top: 10px;
}

.result-set-title-left {
    flex: 0 0 24.2em;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-right: 10px;
}

.result-set-fa-icon {
    float: left;
    padding-top: 4px;
    padding-right: 4px;
}

.result-counts {
    flex: none;
    -webkit-flex: none;
    padding-right: 10px;
}

.result-set-bar {
    border-top: 1px solid black;
    padding: 2px 0px 0px 34px;
    white-space: nowrap;
    display: flex;
    display: -webkit-flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: space-between;
}

.result-set-left {
    display: flex;
    display: -webkit-flex;
    -webkit-flex-flow: row wrap;
    flex-flow: row wrap;
    flex: auto;
    align-items: center;
}

.result-set-progress {
    color: #6f6d70;
    font-style: italic;
    margin-left: 10px;
}

.result-set-buttons {
    margin-right: 25px;
}

.result-set .revision-list {
    padding-left: 0;
}

.logviewer-icon {
    width: 14px;
    height: 16px;
    vertical-align: text-bottom;
    opacity: 0.7;
}

.logviewer-icon:hover {
    opacity: 0.9;
}

.cancel-job-icon {
    font-size: 13px;
}

.icon-blue {
    color: #68aae2;
}

.icon-green:hover {
    color: #0de00d !important;
}

.hover-warning:hover {
    color: #fa4444 !important;
}

.dim-quarter {
    opacity: 0.75;
}

.revision-text {
    display: inline-block;
    vertical-align: middle;
    font: 12px "Lucida Console",Monaco,monospace;
}

.revision-button {
    flex: 0 0 60px;
    margin-right: 4px;
    margin-left: 4px;
}

.revision-list {
    overflow: hidden;
    white-space: nowrap;
}

.result-set .job-list-pad {
    padding-right: 0;
}

.job-list table {
    width: 100%;
}

.job-list table tr {
    border-bottom: 1px dotted lightgrey;
}

.job-list table tr:nth-child(even) {
    background: #f8f8f8;
}

.result-set .job-list-nopad {
    padding-left: 20px;
    padding-right: 0;
    display: block;
}

.job-group {
    margin: 0 -3px 0 3px;
}

.job-btn {
  background: transparent;
  padding: 0 2px 0 2px;
  vertical-align: 0;
  line-height: 1.32;
  display: none;
}

.selected-job {
    border: 4px solid;
    background-color: #fff;
}

.filter-shown {
    display: inline-block;
}
/* ... */

